Revises minimum width of sidebar area on singular pages using the full-width template to ensure that it is not too wide in cases where there is no content.

--- a/css/sidebar-800+.css
+++ b/css/sidebar-800+.css
@@ -16,7 +16,7 @@ body.singular.page-template-template-full-width .gmuj-sidebar-wrapper {
 /* On only singular pages using the full-width template, style sidebar div */
 body.singular.page-template-template-full-width .gmuj-sidebar {
 	display:block;
-	min-width:12em;
+	min-width:2em;
 	max-width:20em;
 	padding:0;
 	margin:0;
